[gd_scene load_steps=6 format=2]

[ext_resource path="res://cardSim.gd" type="Script" id=1]
[ext_resource path="res://Fonts/ArmWrestler.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 65
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[node name="cardSim" type="KinematicBody2D"]
position = Vector2( 202.494, 15.64 )
z_index = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="cardBorder" type="ColorRect" parent="."]
margin_left = -5.0
margin_top = -5.0
margin_right = 105.0
margin_bottom = 155.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cardBody" type="ColorRect" parent="."]
margin_right = 100.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="topLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -20.0
margin_right = 33.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="centerLabel" type="Label" parent="."]
margin_left = 35.0
margin_top = 40.0
margin_right = 75.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="bombreverseback" type="ColorRect" parent="."]
margin_right = 100.0
margin_bottom = 150.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bombreverselabel" type="Label" parent="bombreverseback"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 0 )
text = "BOMB"
__meta__ = {
"_edit_use_anchors_": false
}
